--- a/docs/main.tex
+++ b/docs/main.tex
@@ -102,7 +102,7 @@ The automata used are, however, symbolic automata --- in that they may use and m
   
   \noindent There are two types of event triggers which can be used in \contractlarva:
   \begin{enumerate}[label=(\roman*)]
-    \item \emph{Control-flow triggers} which trigger when a function is called or returns a value: (a) \texttt{before(function)}, triggers whenever \texttt{function} is called and before any of its code is executed\footnote{The checks and the code are instrumented as a modifier triggering before the function body is executed.}; and  (b) \texttt{after(function)}, triggers the moment \texttt{function} terminates successfully (i.e. not reverted). In both cases, if you want to read the value of the parameters, they can be specified in the event e.g. \texttt{before(payAmount(value))} can be written to have a condition dependent on the parameter. Parameters may be left out altogether if you do not wish to access them e.g.  \texttt{before(payAmount)}.
+    \item \emph{Control-flow triggers} which trigger before a function is called or returns a value: (a) \texttt{before(function)}, triggers whenever \texttt{function} is called and before any of its code is executed\footnote{The checks and the code are instrumented as a modifier triggering before the function body is executed.}; and (b) \texttt{after(function)}, triggers the moment \texttt{function} terminates successfully (i.e. not reverted). In both cases, if you want to read the value of the parameters, they can be specified in the event e.g. \texttt{before(payAmount(value))} can be written to have a condition dependent on the parameter. Parameters may be left out altogether if you do not wish to access them e.g.  \texttt{before(payAmount)}. A special case is that of the \texttt{transfer} function implicit to any smart contract, where we use the special keywords \texttt{beforetransfer} and \texttt{aftertransfer}, which capture any calls to the possibly undefined \texttt{transfer} function rather than modifying its body.
     \item \emph{Data-flow triggers}, trigger when an assignment on a global variable occurs (even if the value of the variable does not change) --- \texttt{var@(condition)}  triggers whenever variable \texttt{var} is assigned to (just after the assignment is performed), with the \texttt{condition} holding. The condition is optional, in which case any assignment to the variable will trigger the event. Furthermore, the condition in variable assignment triggers can refer the value of variable \texttt{var} before the assignment using the syntax \texttt{LARVA\_previous\_var} e.g. to trigger when a variable \texttt{x} is assigned to a larger value, one would use the event \texttt{x@(x > LARVA\_previous\_x)}. When the variable in question is a mapping or array then instead of $LARVA\_previous\_x$ we use $LARVA\_previous\_x\_value$ to refer to the previous value at the edited position. For mappings and arrays we can also refer to the index being modified with the $\_index$ keyword. Struct modifications are also handled, but there is currently no way automatic way to identify the struct field being modified.
   \end{enumerate}
       
