--- a/docs/main.tex
+++ b/docs/main.tex
@@ -14,9 +14,9 @@
 \newcommand{\tildearrow}{{\raise.37ex\hbox{$\scriptstyle\mathtt{\sim}$}}>\xspace}
 
 \begin{document}
-\title{\contractlarva v0.21$\alpha$\\User Manual}
+\title{\contractlarva v0.24$\alpha$\\User Manual}
 \author{Gordon J. Pace and Joshua Ellul and Shaun Azzopardi\\\texttt{\{gordon.pace|joshua.ellul|shaun.azzopardi\}@um.edu.mt}}
-\date{5 December 2017, updated 11 October 2019, updated 6 September 2021}
+\date{published 5 December 2017, last updated 11 March 2022}
 \maketitle
 
 
@@ -102,7 +102,16 @@ The automata used are, however, symbolic automata --- in that they may use and m
   
   \noindent There are two types of event triggers which can be used in \contractlarva:
   \begin{enumerate}[label=(\roman*)]
-    \item \emph{Control-flow triggers} which trigger before a function is called or returns a value: (a) \texttt{before(function)}, triggers whenever \texttt{function} is called and before any of its code is executed\footnote{The checks and the code are instrumented as a modifier triggering before the function body is executed.}; and (b) \texttt{after(function)}, triggers the moment \texttt{function} terminates successfully (i.e. not reverted). In both cases, if you want to read the value of the parameters, they can be specified in the event e.g. \texttt{before(payAmount(value))} can be written to have a condition dependent on the parameter. Parameters may be left out altogether if you do not wish to access them e.g.  \texttt{before(payAmount)}. A special case is that of the \texttt{transfer} function implicit to any smart contract, where we use the special keywords \texttt{beforetransfer} and \texttt{aftertransfer}, which capture any calls to the possibly undefined \texttt{transfer} function rather than modifying its body.
+    \item \emph{Control-flow triggers} which trigger before a function is called or returns a value: 
+    
+    \begin{enumerate}
+    	\item[(a)] \texttt{before(function)}, triggers whenever \texttt{function} is called and before any of its code is executed\footnote{The checks and the code are instrumented as a modifier triggering before the function body is executed.}; and 
+    
+    \item[(b)] \texttt{after(function)}, triggers the moment \texttt{function} terminates successfully (i.e. not reverted).
+    
+    \end{enumerate}
+    
+    In both cases, if you want to read the value of the parameters, they can be specified in the event e.g. \texttt{before(payAmount(value))} can be written to have a condition dependent on the parameter. Parameters may be left out altogether if you do not wish to access them e.g.  \texttt{before(payAmount)}. A special case is that of the \texttt{transfer} and \texttt{selfdestruct} functions implicit to any smart contract, where we use the special keywords \texttt{beforetransfer}, \texttt{aftertransfer}, \texttt{beforeselfdestruct}, and \texttt{afterselfdestruct}, which capture any calls to the special \texttt{transfer} and \texttt{selfdestruct} functions.
     \item \emph{Data-flow triggers}, trigger when an assignment on a global variable occurs (even if the value of the variable does not change) --- \texttt{var@(condition)}  triggers whenever variable \texttt{var} is assigned to (just after the assignment is performed), with the \texttt{condition} holding. The condition is optional, in which case any assignment to the variable will trigger the event. Furthermore, the condition in variable assignment triggers can refer the value of variable \texttt{var} before the assignment using the syntax \texttt{LARVA\_previous\_var} e.g. to trigger when a variable \texttt{x} is assigned to a larger value, one would use the event \texttt{x@(x > LARVA\_previous\_x)}. When the variable in question is a mapping or array then instead of $LARVA\_previous\_x$ we use $LARVA\_previous\_x\_value$ to refer to the previous value at the edited position. For mappings and arrays we can also refer to the index being modified with the $\_index$ keyword. Struct modifications are also handled, but there is currently no way automatic way to identify the struct field being modified.
   \end{enumerate}
       
@@ -260,19 +269,19 @@ The automata used are, however, symbolic automata --- in that they may use and m
   
   \smallskip\centerline{\texttt{contractlarva \keyword{DEA file} \keyword{input Solidity file} \keyword{output Solidity file} \keyword{--init-not-inlined}?}}
   
-  \smallskip \texttt{--init-not-inlined} is a flag that can be used to tell \contractlarva not to inline the \texttt{initialisation} block right after the original smart contract's constructor original code, since you may not want to initialise the monitor with the smart contract.
+  \smallskip When the \texttt{--init-not-inlined} flag is present, the \texttt{initialisation} block will not be inlined right after the original smart contract's constructor original code, since you may not want to initialise the monitor with the smart contract but have some custom code for initialisation.
   \smallskip The output file created will have the same functionality as the input one, but augmented as specified in the DEA file.
   
   \subsection{Errors and Warnings}
   
   \begin{description}
-  	\item[DEA has no initial state] Ensure there is a state tagged by \texttt{initial} in the DEA.
-  	\item[DEA has more than one initial state] Ensure there is only one state tagged by \texttt{initial} in the DEA.
-  	\item[State <s> defined multiple times] Ensure label s is only used for one state.
-  	\item[State <s> used in a transition but not declared] Define state with label s in \texttt{states}.
-  	\item[Multiple DEAs named <name>] Ensure each DEA has a unique name.
-  	\item[Variable <v> passed to internal functions and/or modifiers <funcs>, and thus not all modifications to it may be caught] When monitoring for a change in a struct, mapping, or array we are not able to detect changes when the object is passed to another function or used by a modifier, since they are passed in a by reference fashion.
-  	\item[Variable <v> has a range that is a struct, mapping, or array] When monitoring for a change in a mapping we are not able to detect changes when the range is a struct, mapping, or array.
+  	\item[] \textbf{DEA has no initial state} Ensure there is a state tagged by \texttt{initial} in the DEA.
+  	\item[] \textbf{DEA has more than one initial state} Ensure there is only one state tagged by \texttt{initial} in the DEA.
+  	\item[] \textbf{State $<$s$>$ defined multiple times} Ensure label s is only used for one state.
+  	\item[] \textbf{State $<$s$>$ used in a transition but not declared} Define state with label s in \texttt{states}.
+  	\item[] \textbf{Multiple DEAs named $<$name$>$} Ensure each DEA has a unique name.
+  	\item[] \textbf{Variable $<$v$>$ passed to internal functions and/or modifiers $<$funcs$>$, and thus not all modifications to it may be caught} When monitoring for a change in a struct, mapping, or array we are not able to detect changes when the object is passed to another function or used by a modifier, since they are passed in a by reference fashion.
+  	\item[] \textbf{Variable $<$v$>$ has a range that is a struct, mapping, or array} When monitoring for a change in a mapping we are not able to detect changes when the range is a struct, mapping, or array.
   \end{description}
   
   \section{Missing Features}
@@ -280,6 +289,7 @@ The automata used are, however, symbolic automata --- in that they may use and m
   The following are a number of restrictions and limitations in \contractlarva v0.2$\alpha$, but which we plan to add in the future:
   
   \begin{description}
+    \item[Overloaded Solidity Functions:] The implementation of instrumentation does not currently support the smart contract having overloaded functions.
     \item[Monitorable triggers:] Currently, \contractlarva only supports triggers on (named) function calls and variable value updates. Smart contracts provide various other points-of-interest one can (and perhaps should) hook onto, including asset transfers (e.g. via \texttt{send} or \texttt{transfer}), other non-user defined functions (e.g. \texttt{selfdestruct}), fallback function invocations, reverted transactions, etc. The plan is to add the capability to observe these (and other) triggers in future versions of \contractlarva.   
     \item[Variable assignment triggers:] Events firing on variable assignments are currently limited to global variables, and cannot be array elements or structure fields. Furthermore, the variable name may not be reused as a local variable or a function parameter name (since assignments to these would also be wrongly changed). Finally note that initialisation of that variable (as part of its declaration) does not trigger DEA transitions.
     \item[Function return value:] \contractlarva currently provides no means of referring to function return values in guards and actions in an \texttt{after(function)} event.
@@ -307,6 +317,13 @@ The automata used are, however, symbolic automata --- in that they may use and m
 \item[v0.2.3$\alpha$] released 17 February 2020
 \begin{itemize}
   \item Simplified monitor initialisation logic.
+\end{itemize}
+\item[v0.2.4$\alpha$] released 11 March 2022
+  \begin{itemize}
+  	\item Catching selfdestruct and transfer events.
+  	\item Catching modification of mapping, array, and struct variables.
+  	\item Catching variable modification events in tuple assignments.
+  	\item Setting automatically generated variable setters to internal.
 \end{itemize}
 \end{description}
 
